# My_BEAM

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
BEAM/api reference/: apireference.md
BEAM/examples/: examples.md
advanced/: index.html
api-reference/apireference/: index.html
beam/: __init__.py
beam/core/: __init__.py  config.py  graph.py  llm.py  node.py  optimizer.py
beam/examples/: __init__.py  basic_usage.py  prompts_example.py
beam/integrations/: __init__.py  langchain.py  langgraph.py
beam/prompts/: __init__.py  registry.py  template.py
beam/strategies/: __init__.py  bayesian.py  dropout.py  prune.py
changelog/: index.html
docs/: advanced.md  faq.md  index.html  index.md
docs/api-reference/: apireference.md
docs/examples/: basic-examples.md  examples.md  prompts-examples.md
docs/getting-started/: config.md  installation.md  overview.md  quickstart.md
docs/models/: LangChain.md  LangGraph.md  strategies.md
examples/basic-examples/: index.html
examples/examples/: index.html
examples/prompts-examples/: index.html
faq/: index.html
getting-started/config/: index.html
getting-started/installation/: index.html
getting-started/overview/: index.html
getting-started/quickstart/: index.html
models/LangChain/: index.html
models/LangGraph/: index.html
models/strategies/: index.html
search/: search_index.json
